[gd_scene load_steps=8 format=3 uid="uid://dcivrfec77mtf"]

[ext_resource type="Script" path="res://scenes/battle.gd" id="1_ay6vq"]
[ext_resource type="Texture2D" uid="uid://cumr7n6b7lje" path="res://assets/backgrounds/test_bg_2.png" id="2_4legt"]
[ext_resource type="Theme" uid="uid://dx6v3834lty7n" path="res://assets/ui_theme.tres" id="3_dyvag"]
[ext_resource type="PackedScene" uid="uid://bd3qp1joukws2" path="res://gui/card_hand.tscn" id="3_tfw63"]
[ext_resource type="Texture2D" uid="uid://4tjlc4b31w73" path="res://assets/icons/circle.svg" id="3_tmbsg"]
[ext_resource type="PackedScene" uid="uid://yskrqf4opcny" path="res://gui/player_battler_info.tscn" id="4_4184w"]
[ext_resource type="PackedScene" uid="uid://by76gjl8ga21a" path="res://gui/modal.tscn" id="7_a15pt"]

[node name="Battle" type="Node2D"]
z_index = 100
script = ExtResource("1_ay6vq")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-4, -50)
scale = Vector2(1.01408, 0.892187)
texture = ExtResource("2_4legt")
centered = false

[node name="Positions" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="Positions"]
position = Vector2(581, 196)

[node name="Sprite2D" type="Sprite2D" parent="Positions/1"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.2, 0.1)
texture = ExtResource("3_tmbsg")

[node name="2" type="Marker2D" parent="Positions"]
position = Vector2(760, 218)

[node name="Sprite2D" type="Sprite2D" parent="Positions/2"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.2, 0.1)
texture = ExtResource("3_tmbsg")

[node name="3" type="Marker2D" parent="Positions"]
position = Vector2(854, 314)

[node name="Sprite2D" type="Sprite2D" parent="Positions/3"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.2, 0.1)
texture = ExtResource("3_tmbsg")

[node name="4" type="Marker2D" parent="Positions"]
position = Vector2(657, 286)

[node name="Sprite2D" type="Sprite2D" parent="Positions/4"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.2, 0.1)
texture = ExtResource("3_tmbsg")

[node name="5" type="Marker2D" parent="Positions"]
position = Vector2(718, 407)

[node name="Sprite2D" type="Sprite2D" parent="Positions/5"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.2, 0.1)
texture = ExtResource("3_tmbsg")

[node name="6" type="Marker2D" parent="Positions"]
position = Vector2(540, 368)

[node name="Sprite2D" type="Sprite2D" parent="Positions/6"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.2, 0.1)
texture = ExtResource("3_tmbsg")

[node name="7" type="Marker2D" parent="Positions"]
position = Vector2(348, 348)

[node name="Sprite2D" type="Sprite2D" parent="Positions/7"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.2, 0.1)
texture = ExtResource("3_tmbsg")

[node name="8" type="Marker2D" parent="Positions"]
position = Vector2(463, 268)

[node name="Sprite2D" type="Sprite2D" parent="Positions/8"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.2, 0.1)
texture = ExtResource("3_tmbsg")

[node name="9" type="Marker2D" parent="Positions"]
position = Vector2(404, 173)

[node name="Sprite2D" type="Sprite2D" parent="Positions/9"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.2, 0.1)
texture = ExtResource("3_tmbsg")

[node name="10" type="Marker2D" parent="Positions"]
position = Vector2(278, 238)

[node name="Sprite2D" type="Sprite2D" parent="Positions/10"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.2, 0.1)
texture = ExtResource("3_tmbsg")

[node name="MovementButtons" type="Node2D" parent="."]

[node name="Battlers" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HandBackground" type="Panel" parent="CanvasLayer"]
offset_left = 209.0
offset_top = 448.0
offset_right = 1149.0
offset_bottom = 658.0

[node name="Hand" parent="CanvasLayer" instance=ExtResource("3_tfw63")]
offset_top = -195.0
offset_bottom = -10.0

[node name="BattleInfo" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 14.0
offset_top = 12.0
offset_right = 252.0
offset_bottom = 120.0
theme = ExtResource("3_dyvag")

[node name="RoundNumber" type="Label" parent="CanvasLayer/BattleInfo"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 28.0
grow_horizontal = 2
text = "Round 1"
horizontal_alignment = 1

[node name="PlayerInfoBackground" type="Panel" parent="CanvasLayer"]
offset_left = 1.0
offset_top = 374.0
offset_right = 195.0
offset_bottom = 587.0

[node name="PlayerInfo" parent="CanvasLayer" instance=ExtResource("4_4184w")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -267.0
offset_right = 191.0
offset_bottom = -59.0
grow_vertical = 0

[node name="EnemyInfoBackground" type="Panel" parent="CanvasLayer"]
offset_left = 993.0
offset_top = -6.0
offset_right = 1187.0
offset_bottom = 142.0

[node name="EnemyInfo" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -147.0
offset_top = 6.0
offset_right = -7.0
offset_bottom = 406.0
grow_horizontal = 0
theme_override_constants/separation = 16

[node name="Actions" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_dyvag")

[node name="EndTurn" type="Button" parent="CanvasLayer/Actions"]
layout_mode = 0
offset_left = 19.0
offset_top = 599.0
offset_right = 190.0
offset_bottom = 637.0
text = "End Turn"

[node name="Move" type="Button" parent="CanvasLayer/Actions"]
layout_mode = 0
offset_left = 13.0
offset_top = 331.0
offset_right = 184.0
offset_bottom = 369.0
text = "Move (0)"

[node name="Modal" parent="CanvasLayer" instance=ExtResource("7_a15pt")]
close_on_click_outside = false

[node name="Debrief" type="Control" parent="CanvasLayer/Modal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 78.0
offset_top = 51.0
offset_right = -86.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_dyvag")

[node name="Result" type="Label" parent="CanvasLayer/Modal/Debrief"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 33.0
offset_bottom = 82.0
grow_horizontal = 2
text = "Enemy Defeated!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Modal/Debrief"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue"

[connection signal="pressed" from="CanvasLayer/Modal/Debrief/Button" to="." method="_confirm_end_battle"]
